--- a/jsonl_viewer/templates/jsonl_viewer/dataprotection.html
+++ b/jsonl_viewer/templates/jsonl_viewer/dataprotection.html
@@ -1,8 +1,10 @@
 {% extends "jsonl_viewer/base.html" %}
+{% load static %}
+
+{% block title %}Privacy Policy{% endblock %}
 
 {% block content %}
-<div class="container">
-    <h1>Privacy Policy</h1>
+<h1>Privacy Policy</h1>
     <h2>1. An overview of data protection</h2>
     <h3>General information</h3>
     <p>The following information will provide you with an easy to navigate overview of what will happen with your personal data when you visit this website. The term &ldquo;personal data&rdquo; comprises all data that can be used to personally identify you. For detailed information about the subject matter of data protection, please consult our Data Protection Declaration, which we have included beneath this copy.</p>
@@ -88,5 +90,5 @@
     <p>When you call up a page, your browser loads the required fonts into its browser cache to display texts, fonts, and symbols correctly. For this purpose, the browser you use must connect to the servers of Font Awesome. This allows Font Awesome to know that your IP address has been used to access this website. The use of Font Awesome is based on Art. 6(1)(f) GDPR. We have a legitimate interest in the uniform presentation of the typeface on our website. If appropriate consent has been obtained, the processing is carried out exclusively on the basis of Art. 6(1)(a) GDPR and &sect; 25 (1) TTDSG, insofar the consent includes the storage of cookies or the access to information in the user&rsquo;s end device (e.g., device fingerprinting) within the meaning of the TTDSG. This consent can be revoked at any time.</p>
     <p>If your browser does not support Font Awesome, a standard font from your computer will be used.</p>
     <p>Further information about Font Awesome can be found in the Font Awesome privacy policy at: <a href="https://fontawesome.com/privacy" target="_blank" rel="noopener noreferrer">https://fontawesome.com/privacy</a>.</p>
-</div>
+
 {% endblock %}
