--- a/jsonl_viewer/templates/jsonl_viewer/base.html
+++ b/jsonl_viewer/templates/jsonl_viewer/base.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
     <!-- Chart.js CSS (optional if any specific styles needed) -->
     {% block extra_head %}
-    <!-- Removed duplicate styles; centralized in styles.css -->
     <!-- jQuery UI CSS (if needed globally) -->
     <link href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     {% endblock %}
 </head>
 <body>
     <header class="navbar">
-        <div class="container">
+        <div class="container d-flex justify-content-between align-items-center">
             <div class="logo">
                 <a href="{% url 'index' %}">microbe.cards</a>
             </div>
@@ -29,6 +29,12 @@
                 <li><a href="{% url 'about' %}">About</a></li>
                 <li><a href="{% url 'imprint' %}">Imprint</a></li>
                 <li><a href="{% url 'dataprotection' %}">Privacy Policy</a></li>
+                <!-- GitHub Link Added Below -->
+                <li class="github-link">
+                    <a href="https://github.com/GenomeNet/microbe.cards" target="_blank" aria-label="GitHub">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </li>
             </ul>
         </div>
     </header>
